# fewlab

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyproject.toml.backup
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  api.rst  conf.py  evaluate_budget_sensitivity.py  evaluate_random_vs_methods.py  examples.rst  fewlab_demo_colab.ipynb  index.rst  mathematical_background.rst  quickstart.rst  requirements.txt  simulation_results.csv
examples/: EVALUATION_RESULTS.md  budget_sensitivity_results.csv  evaluate_budget_sensitivity.py  evaluate_random_vs_methods.py  fewlab_demo_colab.ipynb
fewlab/: __init__.py  balanced.py  calibration.py  constants.py  core.py  greedy.py  hybrid.py  rowse.py  selection.py  utils.py
tests/: data_synth.py  test_api.py  test_calibration.py  test_calibration.py.bak  test_design.py  test_edge_cases.py  test_greedy.py  test_probs_and_balanced.py  test_quality.py
