[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "fewlab"
version = "0.3.1"
description = "Pick the fewest items to label for unbiased OLS on shares"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gaurav Sood" }]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/finite-sample/fewlab"

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "furo>=2024.7.18",
  "sphinx-autodoc-typehints>=1.25",
  "sphinx-design>=0.6.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.7.0",
  "pre-commit>=3.0.0",
  "mypy>=1.0",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[dependency-groups]

[tool.hatch.build.targets.wheel]
packages = ["fewlab"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "docs",
  "*.ipynb",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"examples/*" = ["E402", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["fewlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=fewlab --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
